www/app.css
/* ... */
.btn {
    padding: .25vh 1.5vh;
    background: var(--blue);
    border: none;
}


.description-header {
  margin-bottom: 5px !important;
  font-size: 15px !important;
}

.description-text {
  font-size: 13px;
}

.awesome-checkbox {
    padding-left: 25px;
}
.awesome-checkbox label::before {
    transform: translateY(3px);
    left: -10px;
    padding: 12px;
}

.form-group .shiny-input-container {
    align-items: flex-start;
}

.last-n-games {
    display: inline-flex;
    align-items: center;
}

/* Styles for the table container, title, and subtitle */
.top-snappaneers {
  /* Center the table */
  margin: 0 auto;
  /* Reduce the table width */
  font-family: var(--font-sans-serif), "Helvetica Neue", Helvetica, Arial, sans-serif;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 2vh 2vw;
}

.snappaneers-header {
  margin: 8px 0;
  font-size: 16px;
}

.snappaneers-title {
  font-size: 20px;
  font-weight: 600;
  display: flex;
}

/* Styles for the table */
.reactable {
  overflow:auto;
}

.snappaneers-tbl {
  font-size: 14px;
  line-height: 18px;
}

.snappaneers-tbl a {
  color: inherit;
}

.dividing-line {
  border-bottom: 1px dashed var(--red);
}

.ranked {
  background: #fafaf9 !important;
}

.ranked:hover {
  background: #E3E3DE !important;
}

.ranked:focus {
  background: #E3E3DE !important;
}

.ranked:active {
  background: #E3E3DE !important;
}
.unranked {
  background: #E3E3DE !important;
}

.unranked:hover {
  background: #fafaf9 !important;
  font-weight: 400 !important;
}

.unranked:focus {
  background: #fafaf9 !important;
  font-weight: 400 !important;
}

.unranked:active {
  background: #fafaf9 !important;
  font-weight: 400 !important;
}

.caption {
  font-size: 0.95rem;
  padding: 2px;
  width: 100%;
  text-align: left;
  margin-top: 5px;
  margin-bottom: 20px;
  border-bottom: 1px solid #adc4c2;
}


/* End my CSS */

body{
    background-color: #ffffff;
    background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%232051e5' fill-opacity='0.04'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
    font-family: var(--font-sans-serif);
    font-size: 16px;
    margin: 0;
    padding: 0;
}


h1 {
    height: auto !important;
    font-size: 1.2rem;
}

h2 {
    height: auto !important;
    margin: 16px 0px;
}

.emoji {
    font-style: normal;
}

.hidden {
    display: none !important;
}

.main-container {
    width: 100%;
    max-width: 1150px;
    height: calc(100vh - 64px);
    min-height: 860px;
    margin: 0px auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.column-flex-center {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    margin: 16px 0px;
}

.cards-wrap {
    display: flex;
    position: relative;
    justify-content: space-around;
    align-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin-bottom: 32px;
}

.card {
    background-color: white;
    width: 40%;
    border: solid 1px;
    border-radius: 15px;
    box-shadow: 0px 4px 25px rgba(0, 72, 103, 0.15);
    z-index: 2;
    overflow: hidden;
}

.card.a-card{
    border-color: var(--red-outline);
}

.card.b-card{
    border-color: var(--blue-outline);
}

.card-heading {
    margin-top: 0;
    padding: 32px;
    font-size: 48px;
    font-weight: 600;
    text-align: center;
    border-top: 12px solid;
    border-bottom: 1px solid;
}

.card-heading.a-card {
    background-color: var(--light-red);
    border-top-color: var(--red);
    border-bottom-color: var(--red-outline);
    color: var(--red);
}

.card-heading.b-card {
    background-color: var(--light-blue);
    border-top-color: var(--blue);
    border-bottom-color: var(--blue-outline);
    color: var(--blue);
}

.form-group {
    display: flex;
    flex-direction: column;
}

.form-group.hidden {
    display: none;
}

input[type=text]{
    padding: 8px;
    margin-top: 4px;
    border-radius: 10px;
    border: solid 1px var(--gray-3);
    background-color: var(--gray-2);
    font-size: 1rem;
    flex-grow: 1;
}

input:focus {
    border-color: var(--blue-outline);
}

::placeholder {
    font-weight: 300;
}

.extra-input {
    position: relative;
    display: flex;
    flex-grow: 1;
}

.exit-btn {
    position: absolute;
    top: -10px;
    right: -10px;
    cursor: pointer;
    fill: white;
}

.exit-btn:hover {
    fill: var(--gray-3);
}

.vs-wrap {
    position: absolute;
    top: auto;
    bottom: auto;
    left: auto;
    right: auto;
    background-color: white;
    font-size: 32px;
    font-style: italic;
    color: var(--gray-4);
    width: 250px;
    height: 250px;
    border-radius: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1;
    overflow: hidden;
}

.vs-bg {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: var(--gray-2);;
}

.shiny-input-radiogroup {
    margin: 0px;
}

.shiny-options-group {
    margin-top: 16px;
}

.radio-inline{
    margin: 0px 8px;
    cursor: pointer;
}

input[type=radio]{
    cursor: pointer;
}

#note {
    font-size: .8rem;
    color: var(--gray-10);
    position: absolute;
    text-align: center;
    width: 100%;
}

.btn {
    padding: 8px 16px;
    font-size: 1em;
    font-weight: 500;
    border-radius: 10px;
    cursor: pointer;
    transition: all 200ms ease-in-out;
    background: var(--gray-2);
    border: 1px solid var(--gray-4);
    display: flex;
    align-items: center;
}

.btn:hover {
    background-color: var(--gray-3);
}

.btn:disabled {
    color: var(--gray-4);
    background-color: var(--gray-2);
    cursor: not-allowed;
}

.btn:focus {
    border: 1px solid rgba(0, 174, 255, 0.8);
    background-color: rgba(0, 174, 255, 0.1);
}
/* ... */

